Formatting Database Proxy

--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -10,11 +10,11 @@ entries:
       title: Overview
       url: /
     - output: web,pdf
-      title: Knowledge Base Accessor
-      url: knowledge_base_accessor.html
+      title: Title
+      url: database_proxy.html
     - output: web,pdf
-      title: Kirby Database Builder
-      url: kirby_database_builder.html
+      title: Dataset Builder
+      url: dataset_builder.html
     - output: web,pdf
       title: Statement Classifier
       url: statement_classifer.html
