--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     tty: true
     volumes:
       - .:/data/
+      - ~/mind.cs.byu.edu:/data/db
 
   notebook:
     <<: *fastai
@@ -24,12 +25,12 @@ services:
     command: watchmedo shell-command --command nbdev_build_docs --pattern *.ipynb --recursive --drop
     network_mode: host # for GitHub Codespaces https://github.com/features/codespaces/
 
-  jekyll:
-    <<: *fastai
-    ports:
-     - "4000:4000"
-    command: >
-     bash -c "pip install .
-     && nbdev_build_docs && cd docs
-     && bundle i
-     && chmod -R u+rwx . && bundle exec jekyll serve --host 0.0.0.0"
+#   jekyll:
+#     <<: *fastai
+#     ports:
+#      - "4000:4000"
+#     command: >
+#      bash -c "pip install .
+#      && nbdev_build_docs && cd docs
+#      && bundle i
+#      && chmod -R u+rwx . && bundle exec jekyll serve --host 0.0.0.0"
