--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -13,6 +13,9 @@ entries:
       title: Dataset Builder
       url: dataset_builder.html
     - output: web,pdf
+      title: Kirby Database Builder
+      url: kirby_database_builder.html
+    - output: web,pdf
       title: Statement Classifier
       url: statement_classifer.html
     - output: web,pdf
@@ -30,6 +33,12 @@ entries:
     - output: web,pdf
       title: Data Manager
       url: data_manager.html
+    - output: web,pdf
+      title: Property Scorer
+      url: property_scorer.html
+    - output: web,pdf
+      title: Title
+      url: Untitled.html
     output: web
     title: kirby
   output: web
