--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       #    tty: true
     volumes:
       - .:/data/
-      - /Users/robertmorain/mind.cs.byu.edu:/data/db
+      - ${HOME}/mind.cs.byu.edu:/data/db
       
   notebook:
     <<: *fastai
