Fixed `01_dataset_builder` to pass basic tests.
I also added the autoreload module to each .ipynb file.

--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -35,7 +35,7 @@ entries:
       url: database_proxy.html
     - output: web,pdf
       title: Title
-      url: read_wiki_data.html
+      url: create_database.html
     - output: web,pdf
       title: Insert To Database
       url: insert_to_database.html
