--- a/settings.ini
+++ b/settings.ini
@@ -29,7 +29,7 @@ requirements = pytorch_lightning torch wandb datasets transformers joblib tqdm<4
 # Optional. Same format as setuptools console_scripts
 scripts = ['bin/download_data']
 # Optional. Same format as setuptools dependency-links
-# dep_links = 
+dep_links = ['https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.0.0/en_core_web_sm-2.0.0.tar.gz#egg=en_core_web_sm']
 
 ###
 # You probably won't need to change anything under here,
