--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -34,14 +34,17 @@ entries:
       title: Database Proxy
       url: database_proxy.html
     - output: web,pdf
-      title: Title
-      url: create_database.html
+      title: Create Database Tables
+      url: create_database_tables.html
     - output: web,pdf
       title: Insert To Database
       url: insert_to_database.html
     - output: web,pdf
       title: Properties
       url: properties.html
+    - output: web,pdf
+      title: Title
+      url: create_database.html
     output: web
     title: kirby
   output: web
