--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,13 @@ services:
     restart: unless-stopped
     working_dir: /data
     image: fastai/codespaces
+    build: .
     logging:
       driver: json-file
       options:
         max-size: 50m
     stdin_open: true
-      #    tty: true
+    tty: true
     volumes:
       - .:/data/
       - ${HOME}/mind.cs.byu.edu:/data/db
@@ -19,20 +20,27 @@ services:
     command: bash -c "pip install -e . && jupyter lab --allow-root --no-browser --ip=0.0.0.0 --port=8080 --NotebookApp.token='' --NotebookApp.password=''"
     ports:
       - "8080:8080"
+    deploy:
+      resources:
+        reservations:
+          devices:
+          - driver: nvidia
+            count: all
+            capabilities: [gpu, utility]
 
   watcher:
     <<: *fastai
     command: watchmedo shell-command --command nbdev_build_docs --pattern *.ipynb --recursive --drop
     network_mode: host # for GitHub Codespaces https://github.com/features/codespaces/
-    
-    
 
-#   jekyll:
-#     <<: *fastai
-#     ports:
-#      - "4000:4000"
-#     command: >
-#      bash -c "pip install .
-#      && nbdev_build_docs && cd docs
-#      && bundle i
-#      && chmod -R u+rwx . && bundle exec jekyll serve --host 0.0.0.0"
+  test:
+    image: nvidia/cuda:11.3.0-runtime-ubuntu18.04
+    command: nvidia-smi
+    deploy:
+      resources:
+        reservations:
+          devices:
+          - driver: nvidia
+            count: all
+            capabilities: [gpu, utility]
+ 
