Run: Wikitext baseline

--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -33,6 +33,9 @@ entries:
     - output: web,pdf
       title: Database Proxy
       url: database_proxy.html
+    - output: web,pdf
+      title: Wikitext Baseline
+      url: exp_0.html
     output: web
     title: kirby
   output: web
