Created description dataset

--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -34,6 +34,9 @@ entries:
       title: Database Proxy
       url: database_proxy.html
     - output: web,pdf
+      title: Properties
+      url: properties.html
+    - output: web,pdf
       title: Wikitext Baseline
       url: exp_0.html
     output: web
