--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,179 @@
-pytorch_lightning 
-wandb 
-datasets 
-transformers 
-joblib 
-tqdm
-qwikidata 
-tensorflow 
-tensorflow_hub 
-spacy 
-sklearn
-nbdev
-flake8
-black
-isort
+absl-py==0.12.0
+aiohttp==3.7.4.post0
+anyio==3.1.0
+appdirs==1.4.4
+argon2-cffi==20.1.0
+astunparse==1.6.3
+async-generator==1.10
+async-timeout==3.0.1
+attrs==21.2.0
+Babel==2.9.1
+backcall==0.2.0
+black==21.6b0
+bleach==3.3.0
+blis==0.7.4
+cachetools==4.2.2
+catalogue==2.0.4
+certifi==2021.5.30
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+configparser==5.0.2
+cymem==2.0.5
+datasets==1.7.0
+decorator==5.0.9
+defusedxml==0.7.1
+dill==0.3.3
+docker-pycreds==0.4.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
+entrypoints==0.3
+fastcore==1.3.20
+fastrelease==0.1.11
+filelock==3.0.12
+flake8==3.9.2
+flatbuffers==1.12
+fsspec==2021.5.0
+future==0.18.2
+gast==0.3.3
+ghapi==0.1.17
+gitdb==4.0.7
+GitPython==3.1.17
+google-auth==1.30.1
+google-auth-oauthlib==0.4.4
+google-pasta==0.2.0
+grpcio==1.32.0
+h5py==2.10.0
+huggingface-hub==0.0.8
+idna==2.10
+ipykernel==5.5.5
+ipython==7.24.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+isort==5.9.1
+jedi==0.18.0
+Jinja2==3.0.1
+joblib==1.0.1
+json5==0.9.5
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.12
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyter-server==1.8.0
+jupyterlab==3.0.16
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.6.0
+jupyterlab-widgets==1.0.0
+Keras-Preprocessing==1.1.2
+-e git+git@github.com:rmorain/kirby.git@49a2f7519c32c0cbca13cc99b3aa78aa4ee57eca#egg=kirby
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib-inline==0.1.2
+mccabe==0.6.1
+mistune==0.8.4
+multidict==5.1.0
+multiprocess==0.70.11.1
+murmurhash==1.0.5
+mypy-extensions==0.4.3
+nbclassic==0.3.1
+nbclient==0.5.3
+nbconvert==5.6.1
+nbdev==1.1.14
+nbformat==5.1.3
+nest-asyncio==1.5.1
+nltk==3.6.2
+nodejs==0.1.1
+notebook==6.4.0
+numpy==1.19.5
+oauthlib==3.1.1
+opt-einsum==3.3.0
+optional-django==0.1.0
+packaging==20.9
+pandas==1.2.4
+pandocfilters==1.4.3
+parso==0.8.2
+pathspec==0.8.1
+pathtools==0.1.2
+pathy==0.5.2
+pexpect==4.8.0
+pickleshare==0.7.5
+preshed==3.0.5
+prometheus-client==0.11.0
+promise==2.3
+prompt-toolkit==3.0.18
+protobuf==3.17.1
+psutil==5.8.0
+ptyprocess==0.7.0
+pudb==2021.1
+pyarrow==3.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.7.0
+pycparser==2.20
+pydantic==1.7.4
+pyDeprecate==0.3.0
+pyflakes==2.3.1
+Pygments==2.9.0
+pyparsing==2.4.7
+pyperclip==1.8.2
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+pytorch-lightning==1.3.3
+pytz==2021.1
+PyYAML==5.4.1
+pyzmq==22.1.0
+qtconsole==5.1.0
+QtPy==1.9.0
+qwikidata==0.4.0
+rake-nltk==1.0.4
+regex==2021.4.4
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
+sacremoses==0.0.45
+scikit-learn==0.24.2
+scipy==1.6.3
+Send2Trash==1.5.0
+sentry-sdk==1.1.0
+shortuuid==1.0.1
+six==1.15.0
+sklearn==0.0
+smart-open==3.0.0
+smmap==4.0.0
+sniffio==1.2.0
+spacy==3.0.6
+spacy-legacy==3.0.5
+srsly==2.4.1
+subprocess32==3.5.4
+tensorboard==2.4.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.4.1
+tensorflow-estimator==2.4.0
+tensorflow-hub==0.12.0
+termcolor==1.1.0
+terminado==0.10.0
+testpath==0.5.0
+thinc==8.0.3
+threadpoolctl==2.1.0
+tokenizers==0.10.3
+toml==0.10.2
+torch==1.8.1
+torchmetrics==0.3.2
+tornado==6.1
+tqdm==4.49.0
+traitlets==5.0.5
+transformers==4.6.1
+typer==0.3.2
+typing-extensions==3.7.4.3
+urllib3==1.26.5
+urwid==2.1.2
+wandb==0.10.31
+wasabi==0.8.2
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.0.1
+Werkzeug==2.0.1
+widgetsnbextension==3.5.1
+wrapt==1.12.1
+xxhash==2.0.2
+yarl==1.6.3
