--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ bleach==3.3.0
 blis==0.7.4
 cachetools==4.2.2
 catalogue==2.0.4
-certifi==2021.5.30
+certifi==2021.10.8
 cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
@@ -23,6 +23,7 @@ cymem==2.0.5
 datasets==1.7.0
 decorator==5.0.9
 defusedxml==0.7.1
+Deprecated==1.2.13
 dill==0.3.3
 docker-pycreds==0.4.0
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
@@ -43,8 +44,9 @@ google-auth-oauthlib==0.4.4
 google-pasta==0.2.0
 grpcio==1.32.0
 h5py==2.10.0
-huggingface-hub==0.0.8
+huggingface-hub==0.4.0
 idna==2.10
+ignite==1.1.0
 ipykernel==5.5.5
 ipython==7.24.0
 ipython-genutils==0.2.0
@@ -65,11 +67,15 @@ jupyterlab-pygments==0.1.2
 jupyterlab-server==2.6.0
 jupyterlab-widgets==1.0.0
 Keras-Preprocessing==1.1.2
+-e git+git@github.com:rmorain/kirby.git@10e8423ec1983aa5758c38d3240677afdbdcfff0#egg=kirby
 Markdown==3.3.4
 MarkupSafe==2.0.1
 matplotlib-inline==0.1.2
 mccabe==0.6.1
 mistune==0.8.4
+mkl-fft==1.3.1
+mkl-random @ file:///tmp/build/80754af9/mkl_random_1626186064646/work
+mkl-service==2.4.0
 multidict==5.1.0
 multiprocess==0.70.11.1
 murmurhash==1.0.5
@@ -83,8 +89,9 @@ nest-asyncio==1.5.1
 nltk==3.6.2
 nodejs==0.1.1
 notebook==6.4.0
-numpy==1.19.5
+numpy @ file:///tmp/build/80754af9/numpy_and_numpy_base_1634095647912/work
 oauthlib==3.1.1
+olefile @ file:///Users/ktietz/demo/mc3/conda-bld/olefile_1629805411829/work
 opt-einsum==3.3.0
 optional-django==0.1.0
 packaging==20.9
@@ -96,6 +103,8 @@ pathtools==0.1.2
 pathy==0.5.2
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==8.4.0
+plyer==2.0.0
 preshed==3.0.5
 prometheus-client==0.11.0
 promise==2.3
@@ -113,6 +122,7 @@ pydantic==1.7.4
 pyDeprecate==0.3.0
 pyflakes==2.3.1
 Pygments==2.9.0
+pymongo==4.0.1
 pyparsing==2.4.7
 pyperclip==1.8.2
 pyrsistent==0.17.3
@@ -125,6 +135,7 @@ qtconsole==5.1.0
 QtPy==1.9.0
 qwikidata==0.4.0
 rake-nltk==1.0.4
+redis==4.1.2
 regex==2021.4.4
 requests==2.25.1
 requests-oauthlib==1.3.0
@@ -135,8 +146,9 @@ scipy==1.6.3
 Send2Trash==1.5.0
 sentry-sdk==1.1.0
 shortuuid==1.0.1
-six==1.15.0
+six @ file:///tmp/build/80754af9/six_1644875935023/work
 sklearn==0.0
+slack-sdk==3.15.2
 smart-open==3.0.0
 smmap==4.0.0
 sniffio==1.2.0
@@ -156,14 +168,16 @@ thinc==8.0.3
 threadpoolctl==2.1.0
 tokenizers==0.10.3
 toml==0.10.2
-torch==1.8.1
+torch==1.10.2
+torchaudio==0.10.2
 torchmetrics==0.3.2
+torchvision==0.11.3
 tornado==6.1
 tqdm==4.49.0
 traitlets==5.0.5
-transformers==4.6.1
+transformers==4.16.2
 typer==0.3.2
-typing-extensions==3.7.4.3
+typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1631814937681/work
 urllib3==1.26.5
 urwid==2.1.2
 wandb==0.10.31
