--- a/requirements.txt
+++ b/requirements.txt
@@ -73,7 +73,6 @@ matplotlib-inline==0.1.2
 mccabe==0.6.1
 mistune==0.8.4
 mkl-fft==1.3.1
-mkl-random @ file:///tmp/build/80754af9/mkl_random_1626186064646/work
 mkl-service==2.4.0
 multidict==5.1.0
 multiprocess==0.70.11.1
@@ -88,9 +87,9 @@ nest-asyncio==1.5.1
 nltk==3.6.2
 nodejs==0.1.1
 notebook==6.4.0
-numpy @ file:///tmp/build/80754af9/numpy_and_numpy_base_1634095647912/work
+numpy 
 oauthlib==3.1.1
-olefile @ file:///Users/ktietz/demo/mc3/conda-bld/olefile_1629805411829/work
+olefile 
 opt-einsum==3.3.0
 optional-django==0.1.0
 packaging==20.9
@@ -145,7 +144,7 @@ scipy==1.6.3
 Send2Trash==1.5.0
 sentry-sdk==1.1.0
 shortuuid==1.0.1
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+six 
 sklearn==0.0
 slack-sdk==3.15.2
 smart-open==3.0.0
@@ -176,7 +175,7 @@ tqdm==4.49.0
 traitlets==5.0.5
 transformers==4.16.2
 typer==0.3.2
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1631814937681/work
+typing-extensions 
 urllib3==1.26.5
 urwid==2.1.2
 wandb==0.10.31
