--- a/settings.ini
+++ b/settings.ini
@@ -25,7 +25,7 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-requirements = pytorch_lightning torch wandb datasets transformers joblib tqdm<4.50.0,>=4.27 ipywidgets chardet<4.0,>=2.0 jupyterlab nodejs rake-nltk qwikidata tensorflow tensorflow_hub spacy sklearn
+requirements = pytorch_lightning torch wandb datasets transformers tqdm spacy redis pandas
 # Optional. Same format as setuptools console_scripts
 scripts = ['bin/download_data']
 # Optional. Same format as setuptools dependency-links
