--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,10 @@
 version: "3"
 services:
-  fastai: &fastai
-    restart: unless-stopped
-    working_dir: /data
-    image: fastai/codespaces
-    build: .
-    logging:
-      driver: json-file
-      options:
-        max-size: 50m
-    stdin_open: true
-    tty: true
-    volumes:
-      - .:/data/
-      - ${HOME}/mind.cs.byu.edu:/data/db
-      
-  notebook:
-    <<: *fastai
-    command: bash -c "pip install -e . && jupyter lab --allow-root --no-browser --ip=0.0.0.0 --port=8080 --NotebookApp.token='' --NotebookApp.password=''"
-    ports:
-      - "8080:8080"
-    deploy:
-      resources:
-        reservations:
-          devices:
-          - driver: nvidia
-            count: all
-            capabilities: [gpu, utility]
+    kirby:
+        build: .
+    redis:
+        image: "redis:alpine"
+        command: redis-server --daemonize yes
 
-  watcher:
-    <<: *fastai
-    command: watchmedo shell-command --command nbdev_build_docs --pattern *.ipynb --recursive --drop
-    network_mode: host # for GitHub Codespaces https://github.com/features/codespaces/
-
-  test:
-    image: nvidia/cuda:11.3.0-runtime-ubuntu18.04
-    command: nvidia-smi
-    deploy:
-      resources:
-        reservations:
-          devices:
-          - driver: nvidia
-            count: all
-            capabilities: [gpu, utility]
- 
+        ports:
+            - "6379:6379"
